liquibase migration files + config created

--- a/cedint-libra/pom.xml
+++ b/cedint-libra/pom.xml
@@ -11,6 +11,7 @@
     <groupId>org.cedacri.spring</groupId>
     <artifactId>cedint-libra</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>cedint-libra</name>
     <description>cedint-libra</description>
     <url/>
@@ -50,7 +51,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webmvc</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.20.1</version>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
