--- a/cedint-libra/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/cedint-libra/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,9 +1,35 @@
+
 databaseChangeLog:
-  - include:
-      file: db/changelog/changeset/001-insert-data-into-CITIES-table.sql
-  - include:
-      file: db/changelog/changeset/002-insert-data-into-CONNECTION_TYPES-table.sql
-  - include:
-      file: db/changelog/changeset/002-insert-data-into-CONNECTION_TYPES-table.sql
-  - include:
-      file: db/changelog/changeset/004-insert-data-into-STATUSES-table.sql
+  - logicalFilePath: db/changelog/db.changelog-master.yaml
+
+  - changeSet:
+      id: 001
+      author: andrei
+      changes:
+        - sqlFile:
+            path: changeset/001-insert-data-into-CITIES-table.sql
+            relativeToChangelogFile: true
+
+  - changeSet:
+      id: 002
+      author: andrei
+      changes:
+        - sqlFile:
+            path: changeset/002-insert-data-into-CONNECTION_TYPES-table.sql
+            relativeToChangelogFile: true
+
+  - changeSet:
+      id: 003
+      author: andrei
+      changes:
+        - sqlFile:
+            path: changeset/003-insert-into-USER_TYPES-table.sql
+            relativeToChangelogFile: true
+
+  - changeSet:
+      id: 004
+      author: andrei
+      changes:
+        - sqlFile:
+            path: changeset/004-insert-into-STATUSES-table.sql
+            relativeToChangelogFile: true
