spring security setup4ik

--- a/cedint-libra/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/cedint-libra/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -61,3 +61,10 @@ databaseChangeLog:
         - sqlFile:
             path: changeset/008-insert-into-issues-table.sql
             relativeToChangelogFile: true
+  - changeSet:
+      id: 010
+      author: andrei
+      changes:
+        - sqlFile:
+            path: changeset/009-update-password-hash-for-every-user.sql
+            relativeToChangelogFile: true
