--- a/cedint-libra/src/main/resources/application.properties
+++ b/cedint-libra/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=cedint-libra
+server.servlet.session.timeout=15m
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
